pinalitan yung maliit na P

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 "<div class='col-xl-3 col-md-4 col-sm-6 col-12'>" +
                 "<div class='card my-3' id='c" + i +
                 "' onmouseenter='hoverGrow(\"c" + i + "\")' onmouseleave='hoverShrink(\"c" + i + "\")'>" +
-                "<img src='pictures/" + pics[i] + "' class='card-img-top'>" +
+                "<img src='Pictures/" + pics[i] + "' class='card-img-top'>" +
                 "<div class='card-body'>" +
                 "<h5 class='card-title'>" + name + "</h5>" +
                 "<p class='card-text' id='text" + i + "'>" + descriptions[i] + "</p>" +
