pinalitan yung malaking H sa Harley

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
     <script>
         var commander = ["Lunox", "Ling", "Popol And Kupa", "Lancelot", "Harley", "Johnson", "Wanwan", "Angela", "Fanny", "Miya", "Zilong", "Vale"];
-        var pics = ["lunox.webp", "ling.webp", "popolandkupa.webp", "lancelot.webp", "Harley.webp", "johnson.webp", "wanwan.webp", "angela.webp", "fanny.webp", "miya.webp", "zilong.webp", "vale.webp"];
+        var pics = ["lunox.webp", "ling.webp", "popolandkupa.webp", "lancelot.webp", "harley.webp", "johnson.webp", "wanwan.webp", "angela.webp", "fanny.webp", "miya.webp", "zilong.webp", "vale.webp"];
         var descriptions = [
             "Twilight Goddess",
             "Cyan Finch",
