--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body data-bs-theme="dark">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-transparent shadow py-3 fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow py-3 fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold text-warning fs-3">Magic Chess Go Go</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
